<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/MidnightBlue"
    tools:context=".ViewSurveyResults">


    <TextView
        android:id="@+id/tv_noOfSurveys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/noOfSurveys"
        android:textColor="#ffffff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_Average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/average"
        android:textColor="#ffffff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_Oldest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/oldest"
        android:textColor="#ffffff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_Youngest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/youngest"
        android:textColor="#ffffff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_LikePizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/likePizza"
        android:textColor="#ffffff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_LikePasta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/likePasta"
        android:textColor="#ffffff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_LikeWors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/likePap"
        android:textColor="#ffffff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_EatOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/eatOut"
        android:textColor="#ffffff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_Movies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/movies"
        android:textColor="#ffffff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_Tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/tv"
        android:textColor="#ffffff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_Radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/radio"
        android:textColor="#ffffff"
        android:textSize="14sp" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button"
        android:text="@string/ok"
        />

</LinearLayout>